--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 rock_library(slam3d
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
-
-rock_executable(slam3d_bin Main.cpp
-    DEPS slam3d)
-
+	SOURCES
+		PoseGraph.cpp
+	HEADERS
+		PoseGraph.hpp
+	DEPS_PKGCONFIG 
+        pcl_registration-1.7 eigen3)
