--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,11 @@ cmake_minimum_required(VERSION 2.6)
 find_package(Rock)
 rock_init(slam3d 0.1)
 rock_standard_layout()
+
+rock_library(slam3d
+	SOURCES
+		src/PoseGraph.cpp
+	HEADERS
+		src/PoseGraph.hpp
+	DEPS_PKGCONFIG 
+        pcl_registration-1.7 eigen3)
