Added Mapper files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,13 @@ find_package(Rock)
 rock_init(slam3d 0.1)
 rock_standard_layout()
 
+# Define the slam3d library
 rock_library(slam3d
 	SOURCES
 		src/PoseGraph.cpp
+		src/Mapper.cpp
 	HEADERS
-		src/PoseGraph.hpp
+		include/slam3d/PoseGraph.hpp
+		include/slam3d/Mapper.hpp
 	DEPS_PKGCONFIG 
         pcl_registration-1.7 eigen3)
