--- a/slam3d.project
+++ b/slam3d.project
@@ -104,4 +104,6 @@
     <File Name="manifest.xml"/>
     <File Name="CMakeLists.txt"/>
   </VirtualDirectory>
+  <Dependencies Name="Debug"/>
+  <Dependencies Name="Release"/>
 </CodeLite_Project>
