Added test case.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,22 @@ find_package(Rock)
 rock_init(slam3d 0.1)
 rock_standard_layout()
 
+include_directories(include)
+
 # Define the slam3d library
 rock_library(slam3d
 	SOURCES
 		src/PoseGraph.cpp
-		src/Mapper.cpp
 	HEADERS
-		include/slam3d/PoseGraph.hpp
-		include/slam3d/Mapper.hpp
+		include/Measurement.hpp
+		include/PoseGraph.hpp
 	DEPS_PKGCONFIG 
-        pcl_registration-1.7 eigen3)
+		pcl_registration-1.7
+		eigen3)
+
+# Build test cases
+rock_testsuite(TestPoseGraph
+SOURCES
+  test/pose_graph.cpp
+DEPS
+  slam3d)
