Added more structure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,30 @@ rock_standard_layout()
 
 include_directories(include)
 
+############################################################
 # Define the slam3d library
+############################################################
 rock_library(slam3d
 	SOURCES
 		src/PoseGraph.cpp
+		src/G2oSolver.cpp
+		src/GraphMapper.cpp
 	HEADERS
 		include/Measurement.hpp
 		include/PoseGraph.hpp
+		include/Solver.hpp
+		include/G2oSolver.hpp
+		include/GraphMapper.hpp
 	DEPS_PKGCONFIG 
 		pcl_registration-1.7
-		eigen3)
+		eigen3
+		g2o)
 
+############################################################
 # Build test cases
+############################################################
 rock_testsuite(TestPoseGraph
-SOURCES
-  test/pose_graph.cpp
-DEPS
-  slam3d)
+  SOURCES
+    test/pose_graph.cpp
+  DEPS
+    slam3d)
