Started with G2oSolver.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 cmake_minimum_required(VERSION 2.6)
 find_package(Rock)
 rock_init(slam3d 0.1)
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../g2o/cmake_modules)
 rock_standard_layout()
 
 include_directories(include)
@@ -24,7 +25,9 @@ rock_library(slam3d
 	DEPS_PKGCONFIG 
 		pcl_registration-1.7
 		eigen3
-		g2o)
+		g2o
+	DEPS_CMAKE
+		Cholmod)
 
 ############################################################
 # Build test cases
