--- a/slam3d.project
+++ b/slam3d.project
@@ -109,5 +109,6 @@
   <Dependencies Name="Release"/>
   <VirtualDirectory Name="test">
     <File Name="test/pose_graph.cpp"/>
+    <File Name="test/g2o_solver.cpp"/>
   </VirtualDirectory>
 </CodeLite_Project>
