Set ROCK_TEST_ENABLED permanently to true

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 # executed from 'project/build' with 'cmake ../'.
 cmake_minimum_required(VERSION 2.6)
 find_package(Rock)
+set(ROCK_TEST_ENABLED ON)
 rock_init(slam3d 0.1)
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../g2o/cmake_modules)
 rock_standard_layout()
