--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ rock_library(slam3d
 	SOURCES
 		src/GraphMapper.cpp
 		src/PointCloudSensor.cpp
+		src/LineScanSensor.cpp
 		src/G2oSolver.cpp
 	HEADERS
 		include/Clock.hpp
@@ -27,6 +28,7 @@ rock_library(slam3d
 		include/GraphMapper.hpp
 		include/Sensor.hpp
 		include/PointCloudSensor.hpp
+		include/LineScanSensor.hpp
 		include/GICPConfiguration.hpp
 		include/Types.hpp
 		include/Odometry.hpp
