Added implementation of GraphMapper using graph_analysis library.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ rock_library(slam3d
 	SOURCES
 		GraphMapper.cpp
 		BoostMapper.cpp
+		GraphAnalysisMapper.cpp
 		PointCloudSensor.cpp
 		G2oSolver.cpp
 	HEADERS
@@ -15,6 +16,7 @@ rock_library(slam3d
 		G2oSolver.hpp
 		GraphMapper.hpp
 		BoostMapper.hpp
+		GraphAnalysisMapper.hpp
 		Sensor.hpp
 		PointCloudSensor.hpp
 		GICPConfiguration.hpp
@@ -24,6 +26,7 @@ rock_library(slam3d
 		pcl_registration-1.7
 		eigen3
 		g2o
+		graph_analysis
 	DEPS_CMAKE
 		Cholmod
 )
