Added definition to CMake.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 ############################################################
 # Define the slam3d library
 ############################################################
+
+add_definitions(-DPCL_WITH_VIEWPOINT)
+
 rock_library(slam3d
 	SOURCES
 		GraphMapper.cpp
