--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,7 +39,7 @@ if(Rock_FOUND)
 		DEPS_CMAKE
 			Cholmod
 	)
-elseif(catkin_FOUND)
+else()
 	list(APPEND CMAKE_MODULE_PATH ${slam3d_SOURCE_DIR}/cmake)
 	find_package(Boost REQUIRED)
 	find_package(Eigen3 REQUIRED)
@@ -62,17 +62,29 @@ elseif(catkin_FOUND)
 		${PCL_REGISTRATION_LIBRARIES}
 	)
 	
+	if(catkin_FOUND)
+		set(INSTALL_LIB_DIR ${CATKIN_PACKAGE_LIB_DESTINATION})
+		set(INSTALL_BIN_DIR ${CATKIN_PACKAGE_BIN_DESTINATION})
+		set(INSTALL_INC_DIR ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+	else()
+		set(INSTALL_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib)
+		set(INSTALL_BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin)
+		set(INSTALL_INC_DIR ${CMAKE_INSTALL_PREFIX}/include/slam3d)
+	endif()
+	
+	message("${INSTALL_LIB_DIR}")
+	message("${INSTALL_BIN_DIR}")
+	message("${INSTALL_INC_DIR}")
+	
 	install(TARGETS slam3d
-		ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-		LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-		RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+		ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
+		LIBRARY DESTINATION ${INSTALL_LIB_DIR}
+		RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 	)
 	
 	install(DIRECTORY .
-		DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+		DESTINATION ${INSTALL_INC_DIR}
 		FILES_MATCHING PATTERN "*.hpp"
 	)
-else()
-	
 endif()
 
