--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,18 +3,18 @@
 ############################################################
 
 set(SLAM3D_INCLUDES
-	BoostMapper.hpp
-	Clock.hpp
-	FileLogger.hpp
-	G2oSolver.hpp
-	GICPConfiguration.hpp
-	GraphMapper.hpp
-	Logger.hpp
-	Odometry.hpp
-	PointCloudSensor.hpp
-	Sensor.hpp
-	Solver.hpp
-	Types.hpp)
+	slam3d/BoostMapper.hpp
+	slam3d/Clock.hpp
+	slam3d/FileLogger.hpp
+	slam3d/G2oSolver.hpp
+	slam3d/GICPConfiguration.hpp
+	slam3d/GraphMapper.hpp
+	slam3d/Logger.hpp
+	slam3d/Odometry.hpp
+	slam3d/PointCloudSensor.hpp
+	slam3d/Sensor.hpp
+	slam3d/Solver.hpp
+	slam3d/Types.hpp)
 
 set(SLAM3D_SOURCES
 	GraphMapper.cpp
@@ -46,6 +46,7 @@ else()
 	find_package(G2O REQUIRED)
 
 	include_directories(
+		slam3d
 		${EIGEN3_INCLUDE_DIR}
 		${PCL_INCLUDE_DIRS}
 		${G2O_INCLUDE_DIR}
@@ -81,7 +82,7 @@ else()
 		RUNTIME DESTINATION ${INSTALL_BIN_DIR}
 	)
 	
-	install(DIRECTORY .
+	install(DIRECTORY slam3d
 		DESTINATION ${INSTALL_INC_DIR}
 		FILES_MATCHING PATTERN "*.hpp"
 	)
