Create include directory required by catkin.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,13 @@ if(Rock_FOUND)
 	rock_standard_layout()
 elseif(catkin_FOUND)
 	message("=== Build using Catkin ===")
+	if(NOT EXISTS ${PROJECT_SOURCE_DIR}/include)
+		execute_process(
+			COMMAND mkdir ${PROJECT_SOURCE_DIR}/include
+			COMMAND ${CMAKE_COMMAND} -E create_symlink ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include/slam3d)
+	endif()
 	catkin_package(
+		INCLUDE_DIRS include
 		LIBRARIES slam3d
 		DEPENDS Boost Eigen3 Cholmod G2O
 	)
