--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 if(Rock_FOUND)
 	message("=== Build using ROCK ===")
 	set(ROCK_TEST_ENABLED ON)
+	add_definitions(-DPCL_WITH_VIEWPOINT)
 	rock_init(slam3d ${SLAM3D_VERSION})
 	rock_standard_layout()
 elseif(catkin_FOUND)
