--- a/package.xml
+++ b/package.xml
@@ -8,18 +8,25 @@
 
 	<license>GPLv3</license>
 	<url type="website">http://wiki.ros.org/slam3d</url>
-	<author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author> -->
+	<author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>
 
-	<buildtool_depend>catkin</buildtool_depend>
+	<buildtool_depend>cmake</buildtool_depend>
 
+	<build_depend>libpcl-all-dev</build_depend>
 	<build_depend>libg2o</build_depend>
+	<build_depend>suitesparse</build_depend>
 	<build_depend>eigen</build_depend>
 	<build_depend>boost</build_depend>
-	<build_depend>suitesparse</build_depend>
 
+	<run_depend>libpcl-all</run_depend>
+	<run_depend>catkin</run_depend>
 	<run_depend>libg2o</run_depend>
+	<run_depend>suitesparse</run_depend>
 	<run_depend>eigen</run_depend>
 	<run_depend>boost</run_depend>
-	<run_depend>suitesparse</run_depend>
+
+	<export>
+		<build_type>cmake</build_type>
+	</export>
 
 </package>
