Use pointclouds with viewpoints.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SLAM3D_VERSION ${SLAM3D_MAJOR_VERSION}.${SLAM3D_MINOR_VERSION}.${SLAM3D_PATC
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 add_definitions(-std=c++11)
+add_definitions(-DPCL_WITH_VIEWPOINT)
 set(BUILD_SHARED_LIBS ON)
 
 find_package(PCL 1.7 REQUIRED COMPONENTS registration)
