--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,24 @@
 image: skasperski/slam3d-ci
 
 binaries:
+   stage: build
    script:
    - mkdir build
    - cd build
    - cmake ..
    - make
+   only:
+   - master
 
 pages:
+   stage: deploy
    script:
    - doxygen Doxyfile
    - rm -rf /home/www/htdocs/apis/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
    - mkdir -p /home/www/htdocs/apis/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
    - mv doc/* /home/www/htdocs/apis/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
- 
+   artifacts:
+     paths:
+     - doc/
+   only:
+   - master 
