Automatically build all tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,16 +80,10 @@ find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 include_directories (${Boost_INCLUDE_DIRS})
 add_definitions(-DBOOST_TEST_DYN_LINK)
 
-add_executable(test_solver test/solver.cpp)
-target_link_libraries(test_solver
-	slam3d
-	${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-)
-add_test(TestSolver test_solver)
-
-add_executable(test_pcl_sensor test/pcl_sensor.cpp)
-target_link_libraries(test_pcl_sensor
-	slam3d
-	${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
-)
-add_test(TestPclSensor test_pcl_sensor)
+file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} test/*.cpp)
+foreach(testSrc ${TEST_SRCS})
+	get_filename_component(testName ${testSrc} NAME_WE)
+	add_executable(test_${testName} ${testSrc})
+	target_link_libraries(test_${testName} ${Boost_LIBRARIES} slam3d)
+	add_test(${testName} test_${testName}) 
+endforeach(testSrc)
