Link to g2o-stuff library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_library(slam3d
 target_link_libraries(slam3d
 	${CHOLMOD_LIBRARIES}
 	${G2O_CORE_LIBRARY}
+	${G2O_STUFF_LIBRARY}
 	${G2O_TYPES_SLAM3D}
 	${G2O_SOLVER_CHOLMOD}
 	${PCL_REGISTRATION_LIBRARIES}
