--- a/slam3d.project
+++ b/slam3d.project
@@ -31,13 +31,13 @@
     <File Name="src/Solver.hpp"/>
     <File Name="src/Types.hpp"/>
     <File Name="src/BoostMapper.hpp"/>
+    <File Name="src/GraphMapper.hpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="src">
     <File Name="src/GraphMapper.cpp"/>
     <File Name="src/G2oSolver.cpp"/>
     <File Name="src/PointCloudSensor.cpp"/>
     <File Name="src/BoostMapper.cpp"/>
-    <File Name="src/GraphAnalysisMapper.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="autoproj">
     <File Name="manifest.xml"/>
