Set version in project() command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
-project(slam3d)
+cmake_policy(VERSION 3.5.1)
 
-set(SLAM3D_MAJOR_VERSION 0)
-set(SLAM3D_MINOR_VERSION 1)
-set(SLAM3D_PATCH_VERSION 0)
-set(SLAM3D_VERSION ${SLAM3D_MAJOR_VERSION}.${SLAM3D_MINOR_VERSION}.${SLAM3D_PATCH_VERSION})
+project(SLAM3D VERSION "1.0.0")
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
