--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,16 @@ pages:
      paths:
      - doc/
    only:
-   - master 
+   - master
+
+software_catalogue_entry:
+   image: d-reg.hb.dfki.de:5000/ubuntu:overview_generator
+   stage: deploy
+   script:
+   - apt update
+   - apt install -y wget
+   - wget http://bob.dfki.uni-bremen.de/software_overview/generate.sh
+   - sh generate.sh $CI_PROJECT_NAMESPACE $CI_PROJECT_NAME $CI_PROJECT_URL
+   only:
+   - master
+
